k8s/api-deployment.yml
# DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quickbite-app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      name: quickbite-app
      labels:
        app: quickbite-app
    spec:
      # imagePullSecrets:
      # - name: regcred
      containers:
      - name: quickbite-app
        image: rickalbbraga/quickbite:latest
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 80
          #   initialDelaySeconds: 60
          #   periodSeconds: 15
          #   failureThreshold: 3
          #   successThreshold: 1
          # readinessProbe:
          #   httpGet:
          #     path: /ready
          #     port: 80
          #   initialDelaySeconds: 15
          #   timeoutSeconds: 15
          #   periodSeconds: 10
          #   successThreshold: 2
          #   failureThreshold: 1
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
# SERVICE
apiVersion: v1
kind: Service
metadata:
  name: svc-quickbite-np
  namespace: staging
spec:
  type: NodePort
  selector:
    app: quickbite-app
  ports:
  - protocol: TCP 
    port: 80
    targetPort: 80
    nodePort: 30001
---
apiVersion: v1
kind: Service
metadata:
  name: svc-quickbite-cip
  namespace: staging
spec:
  type: ClusterIP
  selector:
    app: quickbite-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
