k8s/mongodb-deployment.yml
# mongodb://admin:mongodbk8sHml@localhost
# NAMESPACE
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    name: database
---
# DEPLOYMENT
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: database
spec:
  serviceName: mongodb
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      name: mongodb
      labels:
        app: mongodb
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - name: mongodb
        image: mongo
        resources:
          requests:
            memory: 512Mi
            cpu: 500m
          limits:
            ephemeral-storage: "2Gi"
            memory: 1024Mi
            cpu: 1000m
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodbdata
          mountPath: /data/db
      automountServiceAccountToken: false
      volumes:
      - name: mongodbdata
        persistentVolumeClaim:
          claimName: mongodb-pvc
---
# SERVICE
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc-np
  namespace: database
spec:
  type: NodePort
  selector:
    app: mongodb
  ports:
  - protocol: TCP 
    port: 27017
    targetPort: 27017
    nodePort: 30002
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc-cip
  namespace: database
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
  - protocol: TCP 
    port: 27017
    targetPort: 27017
    name: mongo
---
